Clean up notebooks

--- a/notebooks/03a_selecting_data.ipynb
+++ b/notebooks/03a_selecting_data.ipynb
@@ -1163,33 +1163,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "ae3c0cb0",
    "metadata": {
     "tags": [
      "nbtutor-solution"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# %load _solutions/pandas_03a_selecting_data4.py\n",
-    "len(df[df['Age'] > 70])"
+    "# %load _solutions/pandas_03a_selecting_data4.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "1aa352c5",
    "metadata": {
     "tags": [
@@ -1198,8 +1186,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load _solutions/pandas_03a_selecting_data5.py\n",
-    "(df['Age'] > 70).sum()"
+    "# %load _solutions/pandas_03a_selecting_data5.py"
    ]
   },
   {
@@ -1219,28 +1206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "3ce55041",
    "metadata": {
     "tags": [
      "nbtutor-solution"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "142"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# %load _solutions/pandas_03a_selecting_data6.py\n",
-    "df[(df['Age'] > 30) & (df['Age'] <= 40)]"
+    "# %load _solutions/pandas_03a_selecting_data6.py"
    ]
   },
   {
@@ -1266,9 +1241,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2982bedf-0f71-4f90-a705-8da6aa9bb3a1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "name = 'Braund, Mr. Owen Harris'"
@@ -1276,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0a8b177f-9596-458a-a455-4c3e64b1e4dd",
    "metadata": {
     "tags": [
@@ -1312,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1c33284b-86de-434c-9ac6-3ee4008afc3b",
    "metadata": {
     "tags": [
@@ -1341,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d0769ddf",
    "metadata": {
     "tags": [
@@ -1371,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8653927c",
    "metadata": {
     "tags": [
@@ -1381,361 +1358,6 @@
    "outputs": [],
    "source": [
     "# %load _solutions/pandas_03a_selecting_data10.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "70cb6da1",
-   "metadata": {},
-   "source": [
-    "# [OPTIONAL] more exercises"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "49d05bde",
-   "metadata": {},
-   "source": [
-    "For the quick ones among you, here are some more exercises with some larger dataframe with film data. These exercises are based on the [PyCon tutorial of Brandon Rhodes](https://github.com/brandon-rhodes/pycon-pandas-tutorial/) (so all credit to him!) and the datasets he prepared for that. You can download these data from here: [`titles.csv`](https://course-python-data.s3.eu-central-1.amazonaws.com/titles.csv) and [`cast.csv`](https://course-python-data.s3.eu-central-1.amazonaws.com/cast.csv) and put them in the `/notebooks/data` folder."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c463f1fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cast = pd.read_csv('data/cast.csv')\n",
-    "cast.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2f59892",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "titles = pd.read_csv('data/titles.csv')\n",
-    "titles.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ebe98cdf",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "\n",
-    "<b>EXERCISE 8</b>:\n",
-    "\n",
-    " <ul>\n",
-    "  <li>How many movies are listed in the titles dataframe?</li>\n",
-    "</ul>\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "101bc9c2",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data11.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d3e272ff",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "\n",
-    "<b>EXERCISE 9</b>:\n",
-    "\n",
-    " <ul>\n",
-    "  <li>What are the earliest two films listed in the titles dataframe?</li>\n",
-    "</ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a875b47",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data12.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1150e93f",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "\n",
-    "<b>EXERCISE 10</b>:\n",
-    "\n",
-    " <ul>\n",
-    "  <li>How many movies have the title \"Hamlet\"?</li>\n",
-    "</ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9083845a",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data13.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6c122455",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "\n",
-    "<b>EXERCISE 11</b>:\n",
-    "\n",
-    " <ul>\n",
-    "  <li>List all of the \"Treasure Island\" movies from earliest to most recent.</li>\n",
-    "</ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "973b11d5",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data14.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8efc8e83",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "\n",
-    "<b>EXERCISE 12</b>:\n",
-    "\n",
-    " <ul>\n",
-    "  <li>How many movies were made from 1950 through 1959?</li>\n",
-    "</ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d516c1e",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data15.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2634393f",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data16.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "899d353c",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "\n",
-    "<b>EXERCISE 13</b>:\n",
-    "\n",
-    " <ul>\n",
-    "  <li>How many roles in the movie \"Inception\" are NOT ranked by an \"n\" value?</li>\n",
-    "</ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bcabb630",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data17.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e0011f2",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data18.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ea078b8",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data19.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae3ff390",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "\n",
-    "<b>EXERCISE 14</b>:\n",
-    "\n",
-    " <ul>\n",
-    "  <li>But how many roles in the movie \"Inception\" did receive an \"n\" value?</li>\n",
-    "</ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf63c5c4",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data20.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc32f8f6",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "\n",
-    "<b>EXERCISE 15</b>:\n",
-    "\n",
-    " <ul>\n",
-    "  <li>Display the cast of the \"Titanic\" (the most famous 1997 one) in their correct \"n\"-value order, ignoring roles that did not earn a numeric \"n\" value.</li>\n",
-    "</ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2b4032d",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data21.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "370fa471",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "\n",
-    "<b>EXERCISE 16</b>:\n",
-    "\n",
-    " <ul>\n",
-    "  <li>List the supporting roles (having n=2) played by Brad Pitt in the 1990s, in order by year.</li>\n",
-    "</ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84f1580b",
-   "metadata": {
-    "tags": [
-     "nbtutor-solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# %load _solutions/pandas_03a_selecting_data22.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bcb4f4a4",
-   "metadata": {},
-   "source": [
-    "# Acknowledgement\n",
-    "\n",
-    "\n",
-    "> The optional exercises are based on the [PyCon tutorial of Brandon Rhodes](https://github.com/brandon-rhodes/pycon-pandas-tutorial/) (so all credit to him!) and the datasets he prepared for that.\n",
-    "\n",
-    "---\n"
    ]
   }
  ],
