--- a/notebooks/03b_indexing.ipynb
+++ b/notebooks/03b_indexing.ipynb
@@ -59,7 +59,9 @@
   {
    "cell_type": "markdown",
    "id": "9205d4b6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Changing the DataFrame index"
    ]
@@ -106,7 +108,9 @@
   {
    "cell_type": "markdown",
    "id": "13c20e8b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Selecting data based on the index"
    ]
@@ -491,7 +495,10 @@
   {
    "cell_type": "markdown",
    "id": "7f26d7b3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Alignment on the index"
    ]
@@ -555,7 +562,10 @@
   {
    "cell_type": "markdown",
    "id": "57c7f8ae",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Pitfall: chained indexing (and the 'SettingWithCopyWarning')"
    ]
@@ -708,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
