--- a/notebooks/07_missing_values.ipynb
+++ b/notebooks/07_missing_values.ipynb
@@ -42,8 +42,59 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "     A    B  C\n0  1.0  4.0  7\n1  2.0  NaN  8\n2  NaN  NaN  9",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>9</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     A    B  C\n",
+       "0  1.0  4.0  7\n",
+       "1  2.0  NaN  8\n",
+       "2  NaN  NaN  9"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -86,7 +137,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "nan"
+      "text/plain": [
+       "nan"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -110,7 +163,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "nan"
+      "text/plain": [
+       "nan"
+      ]
      },
      "execution_count": 6,
      "metadata": {},
@@ -154,7 +209,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "1.5"
+      "text/plain": [
+       "1.5"
+      ]
      },
      "execution_count": 7,
      "metadata": {},
@@ -178,7 +235,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "nan"
+      "text/plain": [
+       "nan"
+      ]
      },
      "execution_count": 8,
      "metadata": {},
@@ -210,7 +269,12 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0    4.0\n1    5.0\n2    NaN\nName: A, dtype: float64"
+      "text/plain": [
+       "0    4.0\n",
+       "1    5.0\n",
+       "2    NaN\n",
+       "Name: A, dtype: float64"
+      ]
      },
      "execution_count": 9,
      "metadata": {},
@@ -250,7 +314,12 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0    False\n1    False\n2    False\nName: A, dtype: bool"
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2    False\n",
+       "Name: A, dtype: bool"
+      ]
      },
      "execution_count": 10,
      "metadata": {},
@@ -274,7 +343,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "False"
+      "text/plain": [
+       "False"
+      ]
      },
      "execution_count": 11,
      "metadata": {},
@@ -306,7 +377,12 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0    False\n1    False\n2     True\nName: A, dtype: bool"
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2     True\n",
+       "Name: A, dtype: bool"
+      ]
      },
      "execution_count": 12,
      "metadata": {},
@@ -330,7 +406,12 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0     True\n1     True\n2    False\nName: A, dtype: bool"
+      "text/plain": [
+       "0     True\n",
+       "1     True\n",
+       "2    False\n",
+       "Name: A, dtype: bool"
+      ]
      },
      "execution_count": 13,
      "metadata": {},
@@ -354,7 +435,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "1"
+      "text/plain": [
+       "1"
+      ]
      },
      "execution_count": 15,
      "metadata": {},
@@ -378,7 +461,12 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "A    1\nB    2\nC    0\ndtype: int64"
+      "text/plain": [
+       "A    1\n",
+       "B    2\n",
+       "C    0\n",
+       "dtype: int64"
+      ]
      },
      "execution_count": 16,
      "metadata": {},
@@ -402,8 +490,59 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "     A    B  C\n0  1.0  4.0  7\n1  2.0  NaN  8\n2  NaN  NaN  9",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>9</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     A    B  C\n",
+       "0  1.0  4.0  7\n",
+       "1  2.0  NaN  8\n",
+       "2  NaN  NaN  9"
+      ]
      },
      "execution_count": 17,
      "metadata": {},
@@ -443,8 +582,45 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "     A    B  C\n0  1.0  4.0  7",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>7</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     A    B  C\n",
+       "0  1.0  4.0  7"
+      ]
      },
      "execution_count": 18,
      "metadata": {},
@@ -476,8 +652,52 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "     A    B  C\n0  1.0  4.0  7\n1  2.0  NaN  8",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>8</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     A    B  C\n",
+       "0  1.0  4.0  7\n",
+       "1  2.0  NaN  8"
+      ]
      },
      "execution_count": 19,
      "metadata": {},
@@ -541,14 +761,6 @@
     "\n",
     "</div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1f5bf9a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -570,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
