--- a/notebooks/02_basic_operations.ipynb
+++ b/notebooks/02_basic_operations.ipynb
@@ -15,9 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f953ba9f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -28,9 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "96e13348",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# redefining the example DataFrame\n",
@@ -43,10 +47,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a3ef73b2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>population</th>\n",
+       "      <th>area</th>\n",
+       "      <th>capital</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>30510</td>\n",
+       "      <td>Brussels</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>France</td>\n",
+       "      <td>64.3</td>\n",
+       "      <td>671308</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>357050</td>\n",
+       "      <td>Berlin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>41526</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>64.9</td>\n",
+       "      <td>244820</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          country  population    area    capital\n",
+       "0         Belgium        11.3   30510   Brussels\n",
+       "1          France        64.3  671308      Paris\n",
+       "2         Germany        81.3  357050     Berlin\n",
+       "3     Netherlands        16.9   41526  Amsterdam\n",
+       "4  United Kingdom        64.9  244820     London"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries.head()"
    ]
@@ -54,7 +141,9 @@
   {
    "cell_type": "markdown",
    "id": "e0b2d3d7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Elementwise-operations"
    ]
@@ -71,10 +160,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "29dbad6f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    11.3\n",
+       "1    64.3\n",
+       "2    81.3\n",
+       "3    16.9\n",
+       "4    64.9\n",
+       "Name: population, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "population = countries['population']\n",
     "population"
@@ -82,20 +189,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "adb7d259",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    11300.0\n",
+       "1    64300.0\n",
+       "2    81300.0\n",
+       "3    16900.0\n",
+       "4    64900.0\n",
+       "Name: population, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "population * 1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c9b4a5c0",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1     True\n",
+       "2     True\n",
+       "3    False\n",
+       "4     True\n",
+       "Name: population, dtype: bool"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "population > 50"
    ]
@@ -110,10 +253,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "81f42121",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.000370\n",
+       "1    0.000096\n",
+       "2    0.000228\n",
+       "3    0.000407\n",
+       "4    0.000265\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries['population'] / countries['area']"
    ]
@@ -779,7 +940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
