Delete solutions for exercises not in repo + clear cell outputs

--- a/_solved/criminal_investigation.ipynb
+++ b/_solved/criminal_investigation.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Case: Criminal location tracking\n",
     "**Context**\n",
@@ -23,17 +24,12 @@
     "\n",
     "\n",
     "<small> source: [https://www.crimediggers.nl/]() </small>\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
@@ -43,20 +39,19 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 1. Read in the location data\n",
     "- check which columns are in it, and the data types\n",
     "- convert the datetime column to datetime type\n",
     "- check if there are any missing values\n",
     "- order the data chronologically with `sort_values`"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Read in the data in the /data/ folder\n",
@@ -70,14 +65,12 @@
     "gps1 = gps1.sort_values(by='datetime')\n",
     "gps2 = gps2.sort_values(by='datetime')\n",
     "\n",
-    "gps.head()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "gps1.head()"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 2. Visualize the route of the two criminals on a map\n",
     "For data visualisation, the `plotly.express` libary is a great choice. It is a high-level library that is widely used. You can find documentation [here](https://plotly.com/python/).\n",
@@ -96,36 +89,30 @@
     "- You can animate the map by adding the parameter `animation_frame` to the `px.scatter_mapbox()` function\n",
     "\n",
     "</div>"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries for visualisation\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Criminal 1"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Make sure the data is sorted by time (if not already sorted)\n",
@@ -153,24 +140,20 @@
     "fig.update_traces(marker_color='blue')\n",
     "\n",
     "fig.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Criminal 2\n",
     "Copy your code from the previous cell and change the dataframe to `gps2` to plot the route of criminal 2."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig = px.scatter_mapbox(\n",
@@ -192,13 +175,11 @@
     "# Change trace color\n",
     "fig.update_traces(marker_color='blue')\n",
     "fig.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Plot route of both criminals on one map to see which places they have in common. \n",
     "\n",
@@ -213,23 +194,19 @@
     "    - use the `color` parameter to color the routes differently\n",
     "    \n",
     "</div>"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "You will see that the two criminals share common places. But when where they at the same place **at the same time?** You can manually check for each point, but that is not very efficient. In section 3, we will try to find the exact time and place where they met."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add a column with the name of the criminal\n",
@@ -258,32 +235,26 @@
     "    height=600, \n",
     "    margin={'r': 0, 't': 40, 'l': 0, 'b': 0},\n",
     ")\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 3. Get the exact time and coordinates when they met"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "We want to use the `merge_ordered` function of pandas to take the gps data together. It merges the two gps location data together on the datetime column. The fill_method parameter of the function ensures that the last known location of suspect 2 is put together with the location of suspect 1. \n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the distance between the two criminals for each point in time\n",
@@ -298,39 +269,35 @@
     "gps_merged[['longitude_suspect_1', 'latitude_suspect_1', 'longitude_suspect_2', 'latitude_suspect_2']] = gps_merged[['longitude_suspect_1', 'latitude_suspect_1', 'longitude_suspect_2', 'latitude_suspect_2']].fillna(0)\n",
     "\n",
     "# New column with the distance between the two criminals (in meters)\n",
-    "gps_merged['distance'] = gps_merged.apply(lambda x: geodesic((x['latitude_suspect_1'], x['longitude_suspect_1']), (x['latitude_suspect_2'], x['longitude_suspect_2'])).meters, axis=1)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "gps_merged['distance'] = gps_merged.apply(lambda x: geodesic((x['latitude_suspect_1'], x['longitude_suspect_1']), (x['latitude_suspect_2'], x['longitude_suspect_2'])).meters, axis=1)\n",
+    "\n",
+    "gps_merged.head()"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 4. Solution\n",
     "At 16:15 and 16:30, Suspect 1 and Suspect 2 moved respectively in direction of Vondelpark. But while Suspect 1 passed directly through Vondelstraat, Suspect 2 preferred a longer way to go via Overtoom street (which is longer). Suspect 1 stopped at 16:50 at the spot in RED in the Figure waiting for Suspect 2. He probably turned off his phone then (hence the time gap in the data). Suspect 2 arrived at the same spot around 17:10. He moved immediately to home which reached he reached at 18:00."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get point in time when the two criminals were closest to each other\n",
     "meeting_point = gps_merged[gps_merged['distance'] == gps_merged['distance'].min()]\n",
     "\n",
     "print(f'The two criminals were closest to each other at {meeting_point[\"datetime\"].iloc[0].time()}. At that time, they were {round(meeting_point[\"distance\"].iloc[0], 2)} meters from each other.')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot the meeting point on a map\n",
@@ -364,19 +331,7 @@
     ")\n",
     "\n",
     "fig.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
