--- a/case/criminal_investigation.ipynb
+++ b/case/criminal_investigation.ipynb
@@ -8,7 +8,7 @@
     "**Context**\n",
     "> *During several home searches by the Dutch police, phones were confiscated. After examining these phones, they were found to contain GPS information. It is believed that these two individuals met. Given the importance of the criminal investigation, can you find out the exact spot where these two individuals met?*\n",
     "\n",
-    "<img src=\"../img/banner_case.png\" width=600>\n",
+    "<img src=\"../img/banner_case.png\" width=600 display=block margin-left=auto, margin-right: auto>\n",
     "\n",
     "The solutions is broken down into the following steps:\n",
     "1. Read in the location data\n",
@@ -266,13 +266,6 @@
     "# Plot the meeting point on a map\n",
     "#fig = px.scatter_mapbox()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
