--- a/_solved/criminal_investigation.ipynb
+++ b/_solved/criminal_investigation.ipynb
@@ -6,13 +6,14 @@
    "source": [
     "# Case: Criminal location tracking\n",
     "**Context**\n",
-    "\n",
     "> *During several home searches by the Dutch police, phones were confiscated. After examining these phones, they were found to contain GPS information. It is believed that these two individuals met. Given the importance of the criminal investigation, can you find out the exact spot where these two individuals met?*\n",
+    "\n",
+    "<img src=\"../img/banner_case.png\" width=600 display=block margin-left=auto, margin-right: auto>\n",
     "\n",
     "The solutions is broken down into the following steps:\n",
     "1. Read in the location data\n",
     "2. Visualize the route of the two criminals on a map\n",
-    "3. Get the exact times and coordinates when they met\n",
+    "3. Get the exact times and coordinates when/where they met\n",
     "\n",
     "\n",
     "<br><details><summary>Hints</summary>\n",
@@ -61,10 +62,15 @@
     "# Check the columns and data types\n",
     "print(gps1.info())\n",
     "\n",
+    "# Check for missing values\n",
+    "print(gps1.isnull().sum())\n",
+    "print(gps2.isnull().sum())\n",
+    "\n",
     "# Sort the data chronologically\n",
     "gps1 = gps1.sort_values(by='datetime')\n",
     "gps2 = gps2.sort_values(by='datetime')\n",
     "\n",
+    "# Output the first 5 rows\n",
     "gps1.head()"
    ]
   },
@@ -106,7 +112,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Criminal 1"
+    "### Criminal 1\n",
+    "Create a map of the route of criminal 1 in Amsterdam.\n",
+    "\n",
+    "<br><details><summary>Hint</summary>\n",
+    "    - use `.dt.time` to get the extract the time from the datetime column"
    ]
   },
   {
@@ -269,7 +279,7 @@
     "gps_merged[['longitude_suspect_1', 'latitude_suspect_1', 'longitude_suspect_2', 'latitude_suspect_2']] = gps_merged[['longitude_suspect_1', 'latitude_suspect_1', 'longitude_suspect_2', 'latitude_suspect_2']].fillna(0)\n",
     "\n",
     "# New column with the distance between the two criminals (in meters)\n",
-    "gps_merged['distance'] = gps_merged.apply(lambda x: geodesic((x['latitude_suspect_1'], x['longitude_suspect_1']), (x['latitude_suspect_2'], x['longitude_suspect_2'])).meters, axis=1)\n",
+    "gps_merged['distance'] = gps_merged.apply(lambda row: geodesic((row['latitude_suspect_1'], row['longitude_suspect_1']), (row['latitude_suspect_2'], row['longitude_suspect_2'])).meters, axis=1)\n",
     "\n",
     "gps_merged.head()"
    ]
