--- a/case/criminal_investigation.ipynb
+++ b/case/criminal_investigation.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "source": [
     "## 2. Visualize the route of the two criminals on a map\n",
-    "For data visualisation, the `plotly.express` libary is a great choice. It is a high-level library that is widely used. You can find documentation [here](https://plotly.com/python/).\n",
+    "For data visualisation, the `plotly.express` libary is a great choice. Plotly Express is a built-in part of the plotly library, and is the recommended starting point for creating most common figures. You can find documentation [here](https://plotly.com/python/).\n",
     "\n",
     "\n",
     "<br><details><summary>Hint 1</summary>\n",
@@ -117,7 +117,7 @@
     "Create a map of the route of criminal 1 in Amsterdam.\n",
     "\n",
     "<br><details><summary>Hint</summary>\n",
-    "    - use `.dt.time` to get the extract only time from the datetime column"
+    "    - use `.dt.time` to get the extract the time from the datetime column"
    ]
   },
   {
@@ -211,20 +211,17 @@
    "source": [
     "## 3. Get the exact time and coordinates when they met\n",
     "<br><details><summary>Hint</summary>\n",
-    "    - To calculate the distance between two gps points, we can use the `geodesic` function of the geopy library for this: https://geopy.readthedocs.io/en/stable/#geopy.distance.geodesic\n",
+    "    - To calculate the distance between two gps points, we can use the `geodesic` function of the geopy library: [https://geopy.readthedocs.io/en/stable/#geopy.distance.geodesic]()\n",
     "    - use the `merge_ordered` function of pandas to take the gps data together of both suspects together. It merges the two gps location data together on the datetime column. The fill_method parameter of the function ensures that the last known location of suspect 2 is put together with the location of suspect 1. \n",
     "</details>\n",
     "\n",
     "<br><details><summary>Hint 2</summary>\n",
-    "    - use the `min()` function to get the point in time when the two criminals were closest to each other\n",
+    "    - use the `.apply()` function to apply a custom function to each row of the dataframe (in this case the geodesic function)\n",
+    "</details>\n",
+    "\n",
+    "<br><details><summary>Hint 3</summary>\n",
+    "    - use the `.min()` function on the distance column to get the point in time when the two criminals were closest to each other\n",
     "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n"
    ]
   },
   {
@@ -238,13 +235,12 @@
     "\n",
     "# Sort gps1 and gps2 values chronologically in time\n",
     "\n",
-    "# We want to use the `merge_ordered` function of pandas to take the gps data together of both suspects together. It merges the two gps location data together on the datetime column. The fill_method parameter of the function ensures that the last known location of suspect 2 is put together with the location of suspect 1. \n",
-    "#gps_merged = pd.merge_ordered(gps1, gps2, on='datetime', fill_method='ffill', suffixes=['_suspect_1', '_suspect_2'])\n",
-    "#gps_merged[['longitude_suspect_1', 'latitude_suspect_1', 'longitude_suspect_2', 'latitude_suspect_2']] = gps_merged[['longitude_suspect_1', 'latitude_suspect_1', 'longitude_suspect_2', 'latitude_suspect_2']].fillna(0)\n",
+    "# Merge location data of both criminals together\n",
+    "#gps_merged = pd.merge_ordered()\n",
     "\n",
     "# Add a new column to the merged dataframe with the distance between the two criminals\n",
     "# Use the `geodesic` function of the geopy library for this: https://geopy.readthedocs.io/en/stable/#module-geopy.distance\n",
-    "#gps_merged['distance'] = gps_merged.apply(lambda x: geodesic((x['latitude_suspect_1'], x['longitude_suspect_1']), (x['latitude_suspect_2'], x['longitude_suspect_2'])).meters, axis=1)"
+    "#gps_merged['distance'] = gps_merged.apply(lambda row: axis=1)"
    ]
   },
   {
@@ -254,7 +250,7 @@
    "outputs": [],
    "source": [
     "# Get point in time when the two criminals were closest to each other\n",
-    "# meeting_point = gps_merged[gps_merged['distance'] == gps_merged['distance'].min()]\n"
+    "# meeting_point = "
    ]
   },
   {
